<resources>
    <string name="app_name">nix-android-final-project</string>
    <string name="buy">Buy coffee</string>
    <string name="fill">Fill</string>
    <string name="take">Take money</string>
    <string name="info">Info</string>
    <string name="info_icon">0ml</string>
    <string name="espresso">Espresso</string>
    <string name="latte">Latte</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="back">Back</string>
    <string name="coffee_fill">Coffee beans</string>
    <string name="milk_fill">Milk</string>
    <string name="water_fill">Water</string>
    <string name="cup_fill">Cup</string>
    <string name="empty"> </string>
    <string name="switch_text">UAH to USD</string>
    <string name="cart">Cart</string>
    <string name="cost"> </string>
</resources>