<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/second"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/take_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="@color/main"
        android:text="@string/take"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fill_btn"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/coffee_fill"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/coffee_fill"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espresso_text_cost"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/water_fill"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/water_fill"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milk_fill"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/milk_fill"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/milk_fill"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee_fill"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/cup_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/coffee_cup" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/water_text"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:srcCompat="@mipmap/water" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/milk_text"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:srcCompat="@mipmap/milk" />

    <Button
        android:id="@+id/fill_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="@color/main"
        android:text="@string/fill"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cup_fill"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/coffee_text"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/coffee_beans" />

    <EditText
        android:id="@+id/cup_fill"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cup_fill"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water_fill"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/coffee_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/milk_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coffee_text" />

    <TextView
        android:id="@+id/water_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cup_text" />

    <TextView
        android:id="@+id/cup_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="55dp"
        android:text="@string/empty"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/espresso_btn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:background="@color/second"
        android:contentDescription="@string/espresso"
        android:src="@mipmap/espresso_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/latte_btn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:background="@color/second"
        android:contentDescription="@string/latte"
        android:src="@mipmap/latte_round"
        app:layout_constraintEnd_toStartOf="@+id/cappuccino_btn"
        app:layout_constraintStart_toEndOf="@+id/espresso_btn"
        app:layout_constraintTop_toBottomOf="@+id/info_text" />

    <ImageButton
        android:id="@+id/cappuccino_btn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:background="@color/second"
        android:contentDescription="@string/cappuccino"
        android:src="@mipmap/cappuccino_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text" />

    <Switch
        android:id="@+id/money_switch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:text="@string/switch_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cart_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="@color/main"
        android:text="@string/cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/espresso_text_cost"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/cost"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espresso_btn" />

    <TextView
        android:id="@+id/latte_text_cost"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="63dp"
        android:gravity="center"
        android:text="@string/cost"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/cappuccino_text_cost"
        app:layout_constraintStart_toEndOf="@+id/espresso_text_cost"
        app:layout_constraintTop_toBottomOf="@+id/latte_btn" />

    <TextView
        android:id="@+id/cappuccino_text_cost"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="55dp"
        android:gravity="center"
        android:text="@string/cost"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cappuccino_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>