<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BuyActivity">

    <Button
        android:id="@+id/espresso_btn"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="55dp"
        android:text="@string/espresso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/latte_btn"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:text="@string/latte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espresso_btn" />

    <Button
        android:id="@+id/cappuccino_btn"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:text="@string/cappuccino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latte_btn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/coffee_text"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/coffee_beans" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/cup_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/coffee_cup" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/milk_text"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:srcCompat="@mipmap/milk" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/water_text"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:srcCompat="@mipmap/water" />

    <TextView
        android:id="@+id/coffee_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="60dp"
        android:text="@string/info_icon"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/milk_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="60dp"
        android:textColor="@color/black"
        android:text="@string/info_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coffee_text" />

    <TextView
        android:id="@+id/water_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="60dp"
        android:textColor="@color/black"
        android:text="@string/info_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cup_text" />

    <TextView
        android:id="@+id/cup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="60dp"
        android:textColor="@color/black"
        android:text="@string/info_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="55dp"
        android:onClick="startMainActivity"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cappuccino_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>